fixed the cards on mobile version

--- a/images.css
+++ b/images.css
@@ -5,9 +5,6 @@
   object-fit: cover;
   margin-right: 40px;
 }
-#sver {
-  /* object-position: -220px; */
-}
 
 #calculator {
  width: 50%;
@@ -18,6 +15,7 @@
  object-fit: cover;
  image-rendering: pixelated;
 }
+
 #trophy {
   height: 40%;
   width: 100%;
